# Range

./: .gitignore  README.md  pyproject.toml
apps/api/: database.py  main.py
apps/api/routes/: analysis.py  health.py  play.py  runs.py  training.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/dashboard/: layout.tsx  page.tsx
apps/web/src/app/dashboard/architecture/: page.tsx
apps/web/src/app/dashboard/artifacts/: page.tsx
apps/web/src/components/dashboard/: metrics-charts.tsx  strategy-table.tsx
apps/web/src/components/landing/: architecture.tsx  cta.tsx  features.tsx  game-theory.tsx  hero.tsx  how-it-works.tsx  leaderboard.tsx
apps/web/src/components/ui/: motion.tsx
apps/web/src/hooks/: use-api.ts
apps/web/src/lib/: api.ts  utils.ts
data/: pbt_evolution.json  slumbot_BEST_ql_v4_round1_winner_frozen_20260406_123651_log.json  slumbot_BEST_ql_v5_500h_frozen_20260406_112732_log.json  slumbot_play_2eb39632_log.json  slumbot_play_4ceb518f_log.json  slumbot_play_5c64bb79_log.json  slumbot_play_854c6cb6_log.json  slumbot_play_c35a47b4_log.json  slumbot_play_d4677d7a_log.json  slumbot_play_da6997f7_log.json  slumbot_play_e8309ea9_log.json  slumbot_play_f79bbf79_log.json  slumbot_ppo_log.json  slumbot_rl_v2_log.json  slumbot_rl_v5_log.json  slumbot_rl_v6_log.json  slumbot_training_log.json
scripts/: api.sh  seed.sh  setup.sh  slumbot.sh  train.sh  web.sh
tests/poker/: test_betting_engine.py  test_evaluator.py
tests/solver/: test_kuhn.py
(+6 files in other folders)
